Fix stretched images on feature block

--- a/src/featured_block/style.scss
+++ b/src/featured_block/style.scss
@@ -70,14 +70,13 @@
              color: $white;
           }
         }
-
       }
 
       &.primary-image,
       &.secondary-image {
         
         img {
-          height: 100%;
+          //height: 100%;
           transform-origin: center;
           &.border {
             border: 1px dashed $made-midnight;
